# SelfCite-Reasoning

./: .gitignore  README.md  pyproject.toml
notebooks/: dev.ipynb
selfcite_reasoning/: data_processing.py  vllm_inference_longcite.py
